# GPI-2

./: .clang-format  CMakeLists.txt  configure.ac.in
cmake/: FindIBVerbs.cmake  FindPortals.cmake
config/: devices.m4
src/: CMakeLists.txt  GPI2.c  GPI2_CONFIG.c  GPI2_GRP.c  GPI2_IO.c  GPI2_Logger.c  GPI2_SEG.c  GPI2_SN.c  GPI2_Threads.c  GPI2_Types.h  GPI2_Utility.h  GPI2_Vector_access.c  Makefile.am
src/devices/: CMakeLists.txt
src/devices/ib/: CMakeLists.txt
src/devices/include/: GPI2_Dev.h
src/devices/portals/: CMakeLists.txt  GPI2_PORTALS.c  GPI2_PORTALS.h  GPI2_PORTALS_ATOMIC.c  GPI2_PORTALS_GRP.c  GPI2_PORTALS_IO.c  GPI2_PORTALS_PASSIVE.c  GPI2_PORTALS_VECTOR_ACCESS.c
src/devices/portals4/: CMakeLists.txt  GPI2_PORTALS4.c  GPI2_PORTALS4.h  GPI2_PORTALS4_ATOMIC.c  GPI2_PORTALS4_GRP.c  GPI2_PORTALS4_IO.c  GPI2_PORTALS4_PASSIVE.c  GPI2_PORTALS4_SEG.c
src/devices/tcp/: CMakeLists.txt
src/include/: GASPI.h  GASPI_Vector_access.h  GASPI_types.h
tests/defs/: default_portals4.def
tests/tests/: CMakeLists.txt  Makefile.am
tests/tests/atomic/: CMakeLists.txt
tests/tests/cm/: CMakeLists.txt
tests/tests/collectives/: CMakeLists.txt
tests/tests/comm/: CMakeLists.txt
tests/tests/config/: CMakeLists.txt
tests/tests/error_vec/: CMakeLists.txt
tests/tests/extensions/: CMakeLists.txt
tests/tests/groups/: CMakeLists.txt
tests/tests/init/: CMakeLists.txt
tests/tests/lists/: CMakeLists.txt
tests/tests/notifications/: CMakeLists.txt
tests/tests/passive/: CMakeLists.txt
tests/tests/segments/: CMakeLists.txt
tools/: CMakeLists.txt  query_bxi_limits.c
